--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "pug": "~2.0.0-alpha6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   }
 }
